# audit

./: .env.example  README.md  pyproject.toml
audit/: auth.py  cli.py  config.py  orchestrator.py  runner.py  state.py
audit/stages/: dedupe.py  feedback.py  gapfill.py  hunt.py  recon.py  report.py  trace.py  validate.py
config/: stages.yaml
prompts/: 04-gapfill.md  07-feedback.md
tests/: test_auth.py  test_config.py  test_runner_errors.py  test_state.py
