[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit"
version = "0.1.0"
description = "Cloudflare-style 8-stage vulnerability discovery audit agent driven by Codex subscription auth"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai-codex>=0.1.0b3",
    "click>=8.1",
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
audit = "audit.cli:main"

[tool.setuptools.packages.find]
include = ["audit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
